wxc/include/ewxw/wxc_glue.h


TBool      wxDialUpEvent_IsOwnEvent( TSelf(wxDialUpEvent) _obj );


/* wxDialUpManager */
TClassDef(wxDialUpManager)
TBool      wxDialUpManager_CancelDialing( TSelf(wxDialUpManager) _obj );

TClass(wxDialUpManager) wxDialUpManager_Create(  );

void       wxDialUpManager_Delete( TSelf(wxDialUpManager) _obj );

int        wxDialUpManager_Dial( TSelf(wxDialUpManager) _obj, void* nameOfISP, void* username, void* password, int async );

void       wxDialUpManager_DisableAutoCheckOnlineStatus( TSelf(wxDialUpManager) _obj );

int        wxDialUpManager_EnableAutoCheckOnlineStatus( TSelf(wxDialUpManager) _obj, int nSeconds );

int        wxDialUpManager_GetISPNames( TSelf(wxDialUpManager) _obj, TClass(wxList) _lst );

int        wxDialUpManager_HangUp( TSelf(wxDialUpManager) _obj );

TBool      wxDialUpManager_IsAlwaysOnline( TSelf(wxDialUpManager) _obj );

TBool      wxDialUpManager_IsDialing( TSelf(wxDialUpManager) _obj );

TBool      wxDialUpManager_IsOk( TSelf(wxDialUpManager) _obj );

TBool      wxDialUpManager_IsOnline( TSelf(wxDialUpManager) _obj );

void       wxDialUpManager_SetConnectCommand( TSelf(wxDialUpManager) _obj, void* commandDial, void* commandHangup );

void       wxDialUpManager_SetOnlineStatus( TSelf(wxDialUpManager) _obj, TBool isOnline );

void       wxDialUpManager_SetWellKnownHost( TSelf(wxDialUpManager) _obj, void* hostname, int portno );